@@ -19,34 +19,13 @@
 
 package org.apache.flume.node;
 
-import com.google.common.base.Throwables;
-import com.google.common.collect.Lists;
-import com.google.common.eventbus.EventBus;
-import com.google.common.eventbus.Subscribe;
-import org.apache.commons.cli.CommandLine;
-import org.apache.commons.cli.CommandLineParser;
-import org.apache.commons.cli.GnuParser;
-import org.apache.commons.cli.HelpFormatter;
-import org.apache.commons.cli.Option;
-import org.apache.commons.cli.Options;
-import org.apache.commons.cli.ParseException;
-import org.apache.flume.Channel;
-import org.apache.flume.Constants;
-import org.apache.flume.Context;
-import org.apache.flume.SinkRunner;
-import org.apache.flume.SourceRunner;
-import org.apache.flume.instrumentation.MonitorService;
-import org.apache.flume.instrumentation.MonitoringType;
-import org.apache.flume.lifecycle.LifecycleAware;
-import org.apache.flume.lifecycle.LifecycleState;
-import org.apache.flume.lifecycle.LifecycleSupervisor;
-import org.apache.flume.lifecycle.LifecycleSupervisor.SupervisorPolicy;
-import org.apache.flume.util.SSLUtil;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
+import java.lang.reflect.Constructor;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
@@ -54,6 +33,39 @@ import java.util.Map.Entry;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.locks.ReentrantLock;
+
+import org.apache.commons.cli.CommandLine;
+import org.apache.commons.cli.DefaultParser;
+import org.apache.commons.cli.HelpFormatter;
+import org.apache.commons.cli.Option;
+import org.apache.commons.cli.Options;
+import org.apache.commons.cli.ParseException;
+import org.apache.commons.lang.StringUtils;
+import org.apache.flume.Channel;
+import org.apache.flume.Context;
+import org.apache.flume.Sink;
+import org.apache.flume.SinkProcessor;
+import org.apache.flume.SinkRunner;
+import org.apache.flume.Source;
+import org.apache.flume.SourceRunner;
+import org.apache.flume.instrumentation.MonitorService;
+import org.apache.flume.instrumentation.MonitoringType;
+import org.apache.flume.lifecycle.LifecycleAware;
+import org.apache.flume.lifecycle.LifecycleState;
+import org.apache.flume.lifecycle.LifecycleSupervisor;
+import org.apache.flume.lifecycle.LifecycleSupervisor.SupervisorPolicy;
+import org.apache.flume.node.net.AuthorizationProvider;
+import org.apache.flume.node.net.BasicAuthorizationProvider;
+import org.apache.flume.sink.AbstractSingleSinkProcessor;
+import org.apache.flume.sink.AbstractSinkProcessor;
+import org.apache.flume.util.SSLUtil;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import com.google.common.base.Throwables;
+import com.google.common.collect.Lists;
+import com.google.common.eventbus.EventBus;
+import com.google.common.eventbus.Subscribe;
 
 public class Application {
 
@@ -63,6 +75,8 @@ public class Application {
   public static final String CONF_MONITOR_CLASS = "flume.monitoring.type";
   public static final String CONF_MONITOR_PREFIX = "flume.monitoring.";
 
+  private static final int DEFAULT_INTERVAL = 300;
+  private static final int DEFAULT_FILE_INTERVAL = 30;
   private final List<LifecycleAware> components;
   private final LifecycleSupervisor supervisor;
   private MaterializedConfiguration materializedConfiguration;
@@ -95,6 +109,7 @@ public class Application {
     try {
       lifecycleLock.lockInterruptibly();
       stopAllComponents();
+      initializeAllComponents(conf);
       startAllComponents(conf);
     } catch (InterruptedException e) {
       logger.info("Interrupted while trying to handle configuration event");
@@ -109,8 +124,8 @@ public class Application {
 
   public void stop() {
     lifecycleLock.lock();
-    stopAllComponents();
     try {
+      stopAllComponents();
       supervisor.stop();
       if (monitorServer != null) {
         monitorServer.stop();
@@ -155,6 +170,36 @@ public class Application {
     }
     if (monitorServer != null) {
       monitorServer.stop();
+    }
+  }
+
+  private void initializeAllComponents(MaterializedConfiguration materializedConfiguration) {
+    logger.info("Initializing components");
+    for (Channel ch : materializedConfiguration.getChannels().values()) {
+      while (ch.getLifecycleState() != LifecycleState.START && ch instanceof Initializable) {
+        ((Initializable) ch).initialize(materializedConfiguration);
+      }
+    }
+    for (SinkRunner sinkRunner : materializedConfiguration.getSinkRunners().values()) {
+      SinkProcessor processor = sinkRunner.getPolicy();
+      if (processor instanceof AbstractSingleSinkProcessor) {
+        Sink sink = ((AbstractSingleSinkProcessor) processor).getSink();
+        if (sink instanceof Initializable) {
+          ((Initializable) sink).initialize(materializedConfiguration);
+        }
+      } else if (processor instanceof AbstractSinkProcessor) {
+        for (Sink sink : ((AbstractSinkProcessor) processor).getSinks()) {
+          if (sink instanceof Initializable) {
+            ((Initializable) sink).initialize(materializedConfiguration);
+          }
+        }
+      }
+    }
+    for (SourceRunner sourceRunner : materializedConfiguration.getSourceRunners().values()) {
+      Source source = sourceRunner.getSource();
+      if (source instanceof Initializable) {
+        ((Initializable) source).initialize(materializedConfiguration);
+      }
     }
   }
 
@@ -231,7 +276,7 @@ public class Application {
           //Not a known type, use FQCN
           klass = (Class<? extends MonitorService>) Class.forName(monitorType);
         }
-        this.monitorServer = klass.newInstance();
+        this.monitorServer = klass.getConstructor().newInstance();
         Context context = new Context();
         for (String key : keys) {
           if (key.startsWith(CONF_MONITOR_PREFIX)) {
@@ -242,14 +287,14 @@ public class Application {
         monitorServer.configure(context);
         monitorServer.start();
       }
-    } catch (Exception e) {
+    } catch (ReflectiveOperationException e) {
       logger.warn("Error starting monitoring. "
           + "Monitoring might not be available.", e);
     }
-
   }
 
   public static void main(String[] args) {
+    Properties initProps = loadConfigOpts();
 
     try {
       SSLUtil.initGlobalSSLParameters();
@@ -261,7 +306,40 @@ public class Application {
       options.addOption(option);
 
       option = new Option("f", "conf-file", true,
-          "specify a config file (required if -z missing)");
+              "specify a config file (required if -c, -u, and -z are missing)");
+      option.setRequired(false);
+      options.addOption(option);
+
+      option = new Option("u", "conf-uri", true,
+              "specify a config uri (required if -c, -f and -z are missing)");
+      option.setRequired(false);
+      options.addOption(option);
+
+      option = new Option("a", "auth-provider", true,
+          "specify an authorization provider class");
+      option.setRequired(false);
+      options.addOption(option);
+
+      option = new Option("prov", "conf-provider", true,
+              "specify a configuration provider class (required if -f, -u, and -z are missing)");
+      option.setRequired(false);
+      options.addOption(option);
+
+      option = new Option("user", "conf-user", true, "user name to access configuration uri");
+      option.setRequired(false);
+      options.addOption(option);
+
+      option = new Option("pwd", "conf-password", true, "password to access configuration uri");
+      option.setRequired(false);
+      options.addOption(option);
+
+      option = new Option("i", "poll-interval", true,
+          "number of seconds between checks for a configuration change");
+      option.setRequired(false);
+      options.addOption(option);
+
+      option = new Option("b", "backup-directory", true,
+          "directory in which to store the backup configuration file");
       option.setRequired(false);
       options.addOption(option);
 
@@ -271,7 +349,7 @@ public class Application {
 
       // Options for Zookeeper
       option = new Option("z", "zkConnString", true,
-          "specify the ZooKeeper connection to use (required if -f missing)");
+              "specify the ZooKeeper connection to use (required if -c, -f, and -u are missing)");
       option.setRequired(false);
       options.addOption(option);
 
@@ -283,8 +361,8 @@ public class Application {
       option = new Option("h", "help", false, "display help text");
       options.addOption(option);
 
-      CommandLineParser parser = new GnuParser();
-      CommandLine commandLine = parser.parse(options, args);
+      DefaultParser parser = new DefaultParser();
+      CommandLine commandLine = parser.parse(options, args, initProps);
 
       if (commandLine.hasOption('h')) {
         new HelpFormatter().printHelp("flume-ng agent", options, true);
@@ -299,8 +377,41 @@ public class Application {
         isZkConfigured = true;
       }
 
+      List<URI> confUri = null;
+      ConfigurationProvider provider = null;
+      int defaultInterval = DEFAULT_FILE_INTERVAL;
+      if (commandLine.hasOption('u') || commandLine.hasOption("conf-uri")) {
+        confUri = new ArrayList<>();
+        for (String uri : commandLine.getOptionValues("conf-uri")) {
+          if (uri.toLowerCase(Locale.ROOT).startsWith("http")) {
+            defaultInterval = DEFAULT_INTERVAL;
+          }
+          confUri.add(new URI(uri));
+        }
+      } else if (commandLine.hasOption("f") || commandLine.hasOption("conf-file")) {
+        confUri = new ArrayList<>();
+        for (String filePath : commandLine.getOptionValues("conf-file")) {
+          confUri.add(new File(filePath).toURI());
+        }
+      }
+
+      if (commandLine.hasOption("prov") || commandLine.hasOption("conf-provider")) {
+        String className = commandLine.getOptionValue("conf-provider");
+        try {
+          Class<?> clazz = Application.class.getClassLoader().loadClass(className);
+          Constructor<?> constructor = clazz.getConstructor(String[].class);
+          provider = (ConfigurationProvider) constructor.newInstance((Object[]) args);
+        } catch (ReflectiveOperationException  ex) {
+          logger.error("Error creating ConfigurationProvider {}", className, ex);
+        }
+      }
+
       Application application;
-      if (isZkConfigured) {
+      if (provider != null) {
+        List<LifecycleAware> components = Lists.newArrayList();
+        application = new Application(components);
+        application.handleConfigurationEvent(provider.getConfiguration());
+      } else if (isZkConfigured) {
         // get options
         String zkConnectionStr = commandLine.getOptionValue('z');
         String baseZkPath = commandLine.getOptionValue('p');
@@ -321,44 +432,65 @@ public class Application {
           application = new Application();
           application.handleConfigurationEvent(zookeeperConfigurationProvider.getConfiguration());
         }
-      } else {
-        File configurationFile = new File(commandLine.getOptionValue('f'));
-
-        /*
-         * The following is to ensure that by default the agent will fail on
-         * startup if the file does not exist.
-         */
-        if (!configurationFile.exists()) {
-          // If command line invocation, then need to fail fast
-          if (System.getProperty(Constants.SYSPROP_CALLED_FROM_SERVICE) ==
-              null) {
-            String path = configurationFile.getPath();
-            try {
-              path = configurationFile.getCanonicalPath();
-            } catch (IOException ex) {
-              logger.error("Failed to read canonical path for file: " + path,
-                  ex);
+      } else if (confUri != null) {
+        String confUser = commandLine.getOptionValue("conf-user");
+        String confPassword = commandLine.getOptionValue("conf-password");
+        String pollInterval = commandLine.getOptionValue("poll-interval");
+        String backupDirectory = commandLine.getOptionValue("backup-directory");
+        int interval = StringUtils.isNotEmpty(pollInterval) ? Integer.parseInt(pollInterval) : 0;
+        String verify = commandLine.getOptionValue("verify-host", "true");
+        boolean verifyHost = Boolean.parseBoolean(verify);
+        AuthorizationProvider authorizationProvider = null;
+        String authProviderClass = commandLine.getOptionValue("auth-provider");
+        if (authProviderClass != null) {
+          try {
+            Class<?> clazz = Class.forName(authProviderClass);
+            Object obj = clazz.getDeclaredConstructor(String[].class)
+                .newInstance((Object[]) args);
+            if (obj instanceof AuthorizationProvider) {
+              authorizationProvider = (AuthorizationProvider) obj;
+            } else {
+              logger.error(
+                  "The supplied authorization provider does not implement AuthorizationProvider");
+              return;
             }
-            throw new ParseException(
-                "The specified configuration file does not exist: " + path);
+          } catch (ReflectiveOperationException ex) {
+            logger.error("Unable to create authorization provider: {}", ex.getMessage());
+            return;
+          }
+        }
+        if (authorizationProvider == null && StringUtils.isNotEmpty(confUser)
+            && StringUtils.isNotEmpty(confPassword)) {
+          authorizationProvider = new BasicAuthorizationProvider(confUser, confPassword);
+        }
+        EventBus eventBus = null;
+        if (reload) {
+          eventBus = new EventBus(agentName + "-event-bus");
+          if (interval == 0) {
+            interval = defaultInterval;
+          }
+        }
+        List<ConfigurationSource> configurationSources = new ArrayList<>();
+        for (URI uri : confUri) {
+          ConfigurationSource configurationSource =
+              ConfigurationSourceFactory.getConfigurationSource(uri, authorizationProvider,
+                  verifyHost);
+          if (configurationSource != null) {
+            configurationSources.add(configurationSource);
           }
         }
         List<LifecycleAware> components = Lists.newArrayList();
+        UriConfigurationProvider configurationProvider = new UriConfigurationProvider(agentName,
+            configurationSources, backupDirectory, eventBus, interval);
+        components.add(configurationProvider);
 
-        if (reload) {
-          EventBus eventBus = new EventBus(agentName + "-event-bus");
-          PollingPropertiesFileConfigurationProvider configurationProvider =
-              new PollingPropertiesFileConfigurationProvider(
-                  agentName, configurationFile, eventBus, 30);
-          components.add(configurationProvider);
-          application = new Application(components);
+        application = new Application(components);
+        if (eventBus != null) {
           eventBus.register(application);
-        } else {
-          PropertiesFileConfigurationProvider configurationProvider =
-              new PropertiesFileConfigurationProvider(agentName, configurationFile);
-          application = new Application();
-          application.handleConfigurationEvent(configurationProvider.getConfiguration());
         }
+        application.handleConfigurationEvent(configurationProvider.getConfiguration());
+      } else {
+        throw new ParseException("No configuiration was provided");
       }
       application.start();
 
@@ -370,8 +502,35 @@ public class Application {
         }
       });
 
-    } catch (Exception e) {
+    } catch (ParseException | URISyntaxException | RuntimeException e) {
       logger.error("A fatal error occurred while running. Exception follows.", e);
     }
+  }
+  @SuppressWarnings("PMD")
+  private static Properties loadConfigOpts() {
+    Properties initProps = new Properties();
+    InputStream is = null;
+    try {
+      is = new FileInputStream("/etc/flume/flume.opts");
+    } catch (IOException  ex) {
+      // Ignore the exception.
+    }
+    if (is == null) {
+      is = Application.class.getClassLoader().getResourceAsStream("flume.opts");
+    }
+    if (is != null) {
+      try {
+        initProps.load(is);
+      } catch (Exception ex) {
+        logger.warn("Unable to load options file due to: {}", ex.getMessage());
+      } finally {
+        try {
+          is.close();
+        } catch (IOException ex) {
+          // Ignore this error.
+        }
+      }
+    }
+    return initProps;
   }
 }
